# openclaw-installer

./: .gitignore  CREATE_RELEASE_GUIDE.md  DEVELOPMENT_SUMMARY.md  LICENSE  LOCAL_TEST_GUIDE.md  LOCAL_TEST_REPORT.md  MACOS_BUILD_SUCCESS.md  MACOS_PORT_PLAN.md  MACOS_PORT_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  README.md  RELEASE_NOTES_V2.md  TESTING.md  TEST_REPORT_ROUND1.md  TEST_REPORT_ROUND3.md  UPLOAD_ARTIFACTS_GUIDE.md  V2_ARCHITECTURE.md  V2_RELEASE_COMPLETE.md  WINDOWS_BUILD_SUCCESS.md  WORK_SESSION_2026-02-27.md  index.html  package-lock.json  package.json  test-local.sh
.github/workflows/: build-macos.yml  build-windows.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: README.md  mirrors.json
src-tauri/resources/tools/: README.md
src-tauri/src/: lib.rs
src-tauri/src/commands/: config.rs  detect.rs  doctor.rs  download.rs  install.rs  mod.rs  models.rs  resources.rs  service.rs  troubleshoot.rs  windows_service.rs
src/components/: DownloadProgress.tsx  EnvCheckItem.tsx  ErrorBoundary.tsx  InstallProgress.tsx  InstallStepItem.tsx  LanguageSelector.tsx  LanguageSwitch.tsx  ManualFallback.tsx  ModelManagement.tsx  StatusIcon.tsx  TerminalOutput.tsx  Troubleshooting.tsx  WizardLayout.tsx
src/context/: WizardContext.tsx
src/hooks/: useDownload.ts  useEnvDetection.ts  useInstallation.ts  useModelManagement.ts  useResources.ts  useTroubleshooting.ts
src/i18n/: en.json  index.ts  zh.json
src/pages/: Complete.tsx  Dashboard.tsx  DependencyInstall.tsx  (+8 more)
(+4 files in other folders)
