[package]
name = "openclaw-installer"
version = "0.1.0"
description = "OPENCLAW Assistant - One-click OpenClaw Installer"
authors = ["you"]
edition = "2021"

[lib]
name = "openclaw_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
futures-util = "0.3"
tempfile = "3"
dirs = "6"
base64 = "0.22"
sha2 = "0.10"
fs_extra = "1.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "minwindef"] }
